--- a/mon_habitat/pub/templates/pub/index.html
+++ b/mon_habitat/pub/templates/pub/index.html
@@ -4,11 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% load static %}
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'pub/css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'pub/css/styles.css' %}" />
 
-    <title>Hello, world!</title>
+    <title>MON HABITAT</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
