--- a/mon_habitat/pub/templates/pub/index.html
+++ b/mon_habitat/pub/templates/pub/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+    <script src="https://kit.fontawesome.com/f0355b7a68.js" crossorigin="anonymous"></script>
 
     <title>Mon Habitat</title>
   </head>
@@ -27,16 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Accueil</a>
+                    <a class="nav-link" href="#"><span class="fas fa-home"></span>Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Recherche</a>
+                    <a class="nav-link" href="#"><span class="fas fa-search"></span>Recherche</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Faire une publication</a>
+                    <a class="nav-link" href="#"><span class="fas fa-upload"></span>Faire une publication</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Voir toutes les publications</a>
+                    <a class="nav-link" href="#"><span class="fas fa-eye"></span>Voir toutes les publications</a>
                 </li>
             </ul>
         </div>
