--- a/mon_habitat/pub/templates/pub/index.html
+++ b/mon_habitat/pub/templates/pub/index.html
@@ -25,24 +25,52 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                   <li class="nav-item active">
                     <a class="nav-link" href="#"><span class="fas fa-home"></span>Accueil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><span class="fas fa-search"></span>Recherche</a>
-                </li>
-                <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fas fa-search"></span>Recherche</a>
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="#"><span class="fas fa-upload"></span>Faire une publication</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><span class="fas fa-eye"></span>Voir toutes les publications</a>
-                </li>
-            </ul>
-        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="fas fa-eye"></span>Voir toutes les publications</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
+    <div class="container-fluid">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></    li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img class="d-block w-100" src="{% static 'pub/images/slid1.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+        </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static 'pub/images/slid2.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+      </div>
+      <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'pub/images/slid3.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+      </div>
+     </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
