--- a/mon_habitat/pub/templates/pub/index.html
+++ b/mon_habitat/pub/templates/pub/index.html
@@ -43,8 +43,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></    li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -52,13 +51,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-        <img class="d-block w-100" src="{% static 'pub/images/slid1.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+        <img class="d-block w-100" src="{% static 'pub/images/fa1.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
         </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="{% static 'pub/images/slid2.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+        <img class="d-block w-100" src="{% static 'pub/images/fa3.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
       </div>
       <div class="carousel-item">
-      <img class="d-block w-100" src="{% static 'pub/images/slid3.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+      <img class="d-block w-100" src="{% static 'pub/images/fa5.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
       </div>
      </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -70,7 +69,31 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-    </div>
+<div class="jumbotron">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-6">
+                <h1 class="display-4">Hello, world!</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </p>
+          </div>
+          <div class="col-md-6">
+                <h1 class="display-4">Hello, world!</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </p>
+          </div>
+      </div>
+  </div>
+</div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
