--- a/mon_habitat/pub/templates/pub/index.html
+++ b/mon_habitat/pub/templates/pub/index.html
@@ -69,6 +69,10 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<div class="text-center">
+    <h1>La Plateforme</h1>
+</div>
+
 <div class="jumbotron">
   <div class="container">
       <div class="row">
@@ -78,16 +82,16 @@
                 <hr class="my-4">
                 <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
                 <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Recherche</a>
                 </p>
           </div>
           <div class="col-md-6">
-                <h1 class="display-4">Hello, world!</h1>
-                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <h1 class="display-4">Promoteurs immobilliers!</h1>
+                <p class="lead">Vous êtes un promoteur immobillier, une agence immobillière ou un particulier,vous souhaitez vendre ou mettre une maison en location,notre plateforme vous donne la possiblité de rentabiliser vos ventes et /ou vous mettre en relation avec des personnes dans le besoin.</p>
                 <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <p>Pour faire une publication cliquez ici.</p>
                 <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Faire une publication</a>
                 </p>
           </div>
       </div>
