--- a/mon_habitat/pub/static/pub/css/styles.css
+++ b/mon_habitat/pub/static/pub/css/styles.css
@@ -15,6 +15,16 @@ body {
 	margin-top: 25px;
 }
 
+/** JUMBOTRON **/
 .jumbotron {
-	background-color: black;
+	background-color: #74C3CA;
+}
+
+.text-center {
+	background-color: blue;
+	height: 150px;
+}
+.text-center h1 {
+	text-transform: uppercase;
+	font-family: 'Oxygen';
 }
