add background image in public.html

--- a/mon_habitat/pub/static/pub/css/styles.css
+++ b/mon_habitat/pub/static/pub/css/styles.css
@@ -20,10 +20,15 @@ body {
 	background-color: #464c4d;
 }
 
+
 .text-center {
 	height: 150px;
 }
 .text-center h1 {
 	text-transform: uppercase;
 	font-family: 'Oxygen';
+}
+
+footer{
+	height: 50px;
 }
