--- a/mon_habitat/pub/templates/pub/base.html
+++ b/mon_habitat/pub/templates/pub/base.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#"><span class="fas fa-search"></span>Recherche</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#"><span class="fas fa-upload"></span>Faire une publication</a>
+                    <a class="nav-link" href="{% url 'pub:public' %}"><span class="fas fa-upload"></span>Faire une publication</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><span class="fas fa-eye"></span>Voir toutes les publications</a>
