--- a/mon_habitat/pub/templates/pub/listing.html
+++ b/mon_habitat/pub/templates/pub/listing.html
@@ -1,6 +1,46 @@
 {% extends 'pub/base.html' %} {% load static %} {% load background_image_tags %}
 {% block content %}
 <body style="background: url('{% static 'pub/images/fa7.jpg' %}') no-repeat fixed; background-size: cover;">
+    <div class="container">
+        <div class="card">
+            <h5 class="card-header text-center">Toutes les publications</h5>
+            <div class="card-body">
+                <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">Identifiant</th>
+                        <th scope="col">Nom de l'agence</th>
+                        <th scope="col">Commune</th>
+                        <th scope="col">Catégorie</th>
+                        <th scope="col">Statut</th>
+                        <th scope="col">Contact</th>
+                        <th scope="col">Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>@twitter</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+    </div>
 </body>
 
 {% endblock %}
