add listing url

--- a/mon_habitat/pub/templates/pub/base.html
+++ b/mon_habitat/pub/templates/pub/base.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="{% url 'pub:public' %}"><span class="fas fa-upload"></span>Faire une publication</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fas fa-eye"></span>Voir toutes les publications</a>
+                        <a class="nav-link" href="{% url 'pub:listing' %}"><span class="fas fa-eye"></span>Voir toutes les publications</a>
                     </li>
                 </ul>
             </div>
