--- a/mon_habitat/pub/templates/pub/base.html
+++ b/mon_habitat/pub/templates/pub/base.html
@@ -22,14 +22,14 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#"><img src="{% static 'pub/images/logo2.png' %}"></a>
+            <a class="navbar-brand" href="/"><img src="{% static 'pub/images/logo2.png' %}"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                    <li class="nav-item active">
-                    <a class="nav-link" href="#"><span class="fas fa-home"></span>Accueil</a>
+                    <a class="nav-link" href="/"><span class="fas fa-home"></span>Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><span class="fas fa-search"></span>Recherche</a>
