add a search link

--- a/mon_habitat/pub/templates/pub/base.html
+++ b/mon_habitat/pub/templates/pub/base.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="/"><span class="fas fa-home"></span>Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fas fa-search"></span>Recherche</a>
+                        <a class="nav-link" href="{% url 'pub:search' %}"><span class="fas fa-search"></span>Recherche</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="{% url 'pub:public' %}"><span class="fas fa-upload"></span>Faire une publication</a>
