--- a/mon_habitat/pub/templates/pub/index.html
+++ b/mon_habitat/pub/templates/pub/index.html
@@ -2,22 +2,34 @@
 
 {% block content %}
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></    li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-    <img class="d-block w-100" src="{% static 'pub/images/fa1.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></    li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+      <img class="d-block w-100" src="{% static 'pub/images/fa1.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Villa</h5>
+        <p>Vous méritez bien plus que le meilleur</p>
+      </div>
     </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" src="{% static 'pub/images/fa3.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
-  </div>
-  <div class="carousel-item">
-  <img class="d-block w-100" src="{% static 'pub/images/fa5.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
-  </div>
- </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'pub/images/fa3.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Haut-Standing</h5>
+        <p>Vous méritez bien plus que le meilleur</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'pub/images/fa5.jpg' /800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide %}">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Appartement</h5>
+        <p>Vous méritez bien plus que le meilleur</p>
+      </div>
+    </div>
+</div>
 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 <span class="sr-only">Previous</span>
@@ -30,29 +42,29 @@
 <div class="text-center">
 <h1>La Plateforme</h1>
 </div>
-
-<div class="jumbotron">
 <div class="container">
   <div class="row">
-      <div class="col-md-6">
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Recherche</a>
-            </p>
+    <div class="col-lg-6">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top bg-dark" src="{% static 'pub/images/logo2.png' /100px180/" alt="Card image cap %}">
+        <div class="card-body">
+          <h5 class="card-title">Clients !!</h5>
+          <p class="card-text">Chers clients, vous êtes dans le besoin, vous avez besoin d'un endroit pour votre séjour, votre famille ou vos affaires etc... Notre plateforme vous met en relation avec de potentiels particuliers ou agences immobillères et ainsi voir toutes les offres disponibles selon votre commune, la catégorie et le statut de l'endroit que vous cherchez.</p>
+          <a href="{% url 'pub:search' %}" class="btn btn-primary">Rechercher</a>
+        </div>
       </div>
-      <div class="col-md-6">
-            <h1 class="display-4">Promoteurs immobilliers!</h1>
-            <p class="lead">Vous êtes un promoteur immobillier, une agence immobillière ou un particulier,vous souhaitez vendre ou mettre une maison en location,notre plateforme vous donne la possiblité de rentabiliser vos ventes et /ou vous mettre en relation avec des personnes dans le besoin.</p>
-            <hr class="my-4">
-            <p>Pour faire une publication cliquez ici.</p>
-            <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Faire une publication</a>
-            </p>
+    </div>
+    <div class="col-lg-6">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top bg-dark" src="{% static 'pub/images/logo2.png' /100px180/" alt="Card image cap %}">
+        <div class="card-body">
+          <h5 class="card-title">Promoteurs immobilliers!</h5>
+          <p class="card-text">Vous êtes un promoteur immobillier, une agence immobillière ou un particulier,vous souhaitez vendre ou mettre une maison en location,notre plateforme vous donne la possiblité de rentabiliser vos ventes et /ou vous mettre en relation avec des personnes dans le besoin. Pour faire une publication cliquez ici.</p>
+          <a href="{% url 'pub:public' %}" class="btn btn-primary">Faire une publication</a>
+        </div>
       </div>
+    </div>
   </div>
 </div>
-</div>
+
 {% endblock%}
