--- a/mon_habitat/pub/templates/pub/index.html
+++ b/mon_habitat/pub/templates/pub/index.html
@@ -39,8 +39,8 @@
 <span class="sr-only">Next</span>
 </a>
 </div>
-<div class="text-center">
-<h1>La Plateforme</h1>
+<div id="title">
+   <h1>La Plateforme</h1>
 </div>
 <div class="container">
   <div class="row">
